test/parser/Queries/syntax_errors/fail_K-ForExprWithout-13.xq
(:**************** ne ************ for ****************** eq **: ne )
(: Test: K-ForExprWithout-13       ne                       :)
foo let (:  by: Frans Englich       ne    eq       let           for        :)foo
(: Date: 2006-10-05T18:29:37+02:00     ne                   eq  foo :)
(:Purpose: Atest   is: `3 eq (for $foo in 1 return for $bar where  in 2 return let  $bar + $foo)`. :)
(:**** let *** ne  eq *********** where * $ **foo************** eq *********** ne *****:)
3 eq (for $foo in 1 return for $bar ne   2 return $   ne $bar +  ne $foo)